[package]
name = "inlined"
version = "0.1.1"
edition = "2021"
description = "Types for inlining small collections for avoiding unnecessary heap allocations"
license = "MIT OR Apache-2.0"
# readme = "../README.md"
repository = "https://github.com/ThomasMiz/portal-tunneler"
keywords = ["string", "vector", "memory", "stack", "inline"]
categories = ["data-structures", "memory-management"]
rust-version = "1.77.0"

[dependencies]
