[package]
name = "portal-tunneler-proto"
version = "0.1.0-beta.0"
edition = "2021"
description = "An async implementation of the tunneling protocol used by portal-tunneler"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/ThomasMiz/portal-tunneler"
keywords = ["network", "protocol", "hole-punching", "udp", "peer-to-peer"]
categories = ["network-programming"]
rust-version = "1.77.1"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
quinn = { version = "0.10.2", features = ["tls-rustls"] }
