[package]
name = "stdin-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
quinn = { version = "0.10.2", features = ["tls-rustls"] }
quinn-udp = { version = "0.4.1" }
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
rcgen = "0.12.1"
juan-puncher-sm = { path = "../juan-puncher-sm", version = "0.1.0" }
